--- a/app/src/main/res/layout-land/activity_tables.xml
+++ b/app/src/main/res/layout-land/activity_tables.xml
@@ -7,73 +7,76 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <Button
-        android:id="@+id/button"
+        android:id="@+id/table1_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table1"
         android:layout_marginStart="39dp"
-        android:onClick="goToOrder"
         android:layout_marginLeft="39dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/table2_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table2"
-        android:onClick="goToKitchen"
         android:layout_marginLeft="39dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/table3_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table3"
         android:layout_marginStart="39dp"
-        android:onClick="goToInventory"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toRightOf="@+id/button"
-        android:layout_marginLeft="39dp" />
+        app:layout_constraintLeft_toRightOf="@+id/table1_button"
+        android:layout_marginLeft="39dp"
+        android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/table4_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table4"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/button2"
-        android:layout_marginLeft="39dp" />
+        app:layout_constraintLeft_toRightOf="@+id/table2_button"
+        android:layout_marginLeft="39dp"
+        android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/table5_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table5"
         android:layout_marginStart="39dp"
-        app:layout_constraintLeft_toRightOf="@+id/button3"
+        app:layout_constraintLeft_toRightOf="@+id/table3_button"
         android:layout_marginLeft="39dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/table6_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table6"
-        app:layout_constraintLeft_toRightOf="@+id/button4"
+        app:layout_constraintLeft_toRightOf="@+id/table4_button"
         android:layout_marginLeft="39dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/table7_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table7"
@@ -86,6 +89,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.952" />
+        app:layout_constraintHorizontal_bias="0.952"
+        android:onClick="goToOrder"/>
 
 </android.support.constraint.ConstraintLayout>
