--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -10,7 +10,7 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/table1_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table1"
@@ -22,7 +22,7 @@
         android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/table2_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table2"
@@ -31,10 +31,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="39dp"
-        android:onClick="goToKitchen"/>
+        android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/table3_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table3"
@@ -42,11 +42,11 @@
         android:layout_marginLeft="39dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        android:onClick="goToInventory"/>
+        app:layout_constraintTop_toBottomOf="@+id/table1_button"
+        android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/table4_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table4"
@@ -54,10 +54,11 @@
         android:layout_marginRight="39dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/table2_button"
+        android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/table5_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table5"
@@ -65,10 +66,11 @@
         android:layout_marginLeft="39dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/table3_button"
+        android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/table6_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table6"
@@ -76,17 +78,19 @@
         android:layout_marginRight="39dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/table4_button"
+        android:onClick="goToOrder"/>
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/table7_button"
         android:layout_width="115dp"
         android:layout_height="85dp"
         android:text="@string/table7"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/table5_button"
         android:layout_marginLeft="135dp"
         android:layout_marginStart="135dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:onClick="goToOrder"/>
 
 </android.support.constraint.ConstraintLayout>
