--- a/app/src/main/res/layout/activity_tables.xml
+++ b/app/src/main/res/layout/activity_tables.xml
@@ -4,93 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="se.miun.antonsskafferi.TablesActivity"
-    tools:layout_editor_absoluteY="73dp"
-    tools:layout_editor_absoluteX="0dp">
+    tools:context="se.miun.antonsskafferi.TablesActivity">
 
-
-    <Button
-        android:id="@+id/table1_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table1"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
+    <ListView
+        android:id="@+id/ListView2"
+        android:layout_width="367dp"
+        android:layout_height="464dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:scrollbars="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="39dp"
-        android:onClick="goToOrder"/>
-
-    <Button
-        android:id="@+id/table2_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table2"
-        android:layout_marginEnd="39dp"
-        android:layout_marginRight="39dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="39dp"
-        android:onClick="goToOrder"/>
+        app:layout_constraintTop_toTopOf="parent">
+    </ListView>
 
     <Button
-        android:id="@+id/table3_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table3"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
+        android:id="@+id/button8"
+        android:layout_width="168dp"
+        android:layout_height="38dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/add"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/table1_button"
-        android:onClick="goToOrder"/>
+        app:layout_constraintTop_toBottomOf="@+id/ListView2" />
 
     <Button
-        android:id="@+id/table4_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table4"
-        android:layout_marginEnd="39dp"
-        android:layout_marginRight="39dp"
+        android:id="@+id/button9"
+        android:layout_width="168dp"
+        android:layout_height="38dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="0dp"
+        android:text="@string/clear_table"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/table2_button"
-        android:onClick="goToOrder"/>
-
-    <Button
-        android:id="@+id/table5_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table5"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/table3_button"
-        android:onClick="goToOrder"/>
-
-    <Button
-        android:id="@+id/table6_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table6"
-        android:layout_marginEnd="39dp"
-        android:layout_marginRight="39dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/table4_button"
-        android:onClick="goToOrder"/>
-
-    <Button
-        android:id="@+id/table7_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table7"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/table5_button"
-        android:layout_marginLeft="135dp"
-        android:layout_marginStart="135dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:onClick="goToOrder"/>
+        app:layout_constraintTop_toBottomOf="@+id/ListView2" />
 
 </android.support.constraint.ConstraintLayout>
