--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -1,10 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="se.miun.antonsskafferi.ScheduleActivity">
+    tools:context="se.miun.antonsskafferi.ScheduleActivity"
+    android:orientation="vertical"
+    android:id="@+id/schedule_layout"
+    android:paddingRight="10dp"
+    android:paddingLeft="10dp">
+
+    <Button
+        android:id="@+id/update_schedule_button"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:text="Updatera bokningar"
+        android:textSize="15sp"
+        android:onClick=""/>
+    <TextView
+        android:id="@+id/text123"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <ListView
+        android:id="@+id/schedule_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
