--- a/app/src/main/res/layout/table_order_spec.xml
+++ b/app/src/main/res/layout/table_order_spec.xml
@@ -33,7 +33,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginStart="10dp"
         android:background="@drawable/ic_delete_black_24dp"
-        android:onClick="clearSpec"/>
+        android:onClick="removeSpecOrder"/>
 
 
 </LinearLayout>
