--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -7,6 +7,7 @@
     tools:context="se.miun.antonsskafferi.OrdersActivity">
 
     <RelativeLayout
+        android:id="@+id/order_layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginBottom="7dp"
@@ -19,17 +20,17 @@
         app:layout_constraintRight_toRightOf="parent">
 
         <ListView
-            android:id="@+id/orderList"
+            android:id="@+id/order_list"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/editButton"
+            android:layout_above="@+id/edit_button"
             android:layout_alignParentTop="true">
 
         </ListView>
 
 
         <Button
-            android:id="@+id/editButton"
+            android:id="@+id/edit_button"
             android:layout_width="160dp"
             android:layout_height="40dp"
             android:layout_alignParentBottom="true"
@@ -42,7 +43,7 @@
 
 
         <Button
-            android:id="@+id/clearButton"
+            android:id="@+id/clear_button"
             android:layout_width="160dp"
             android:layout_height="40dp"
             android:layout_alignParentBottom="true"
@@ -52,7 +53,7 @@
             android:layout_marginRight="12dp"
             android:text="@string/clear_table"
             app:layout_constraintRight_toRightOf="parent"
-            android:onClick="clearOrders"/>
+            android:onClick="showConfirmPopup"/>
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
