--- a/app/src/main/res/layout/inventory_list_item.xml
+++ b/app/src/main/res/layout/inventory_list_item.xml
@@ -14,8 +14,7 @@
         android:paddingStart="5dp"
         android:paddingBottom="10dp"
         android:layout_weight="3.5"
-        android:textColor="@color/colorBlack"
-        />
+        android:textColor="@color/colorBlack" />
 
     <EditText
         android:id="@+id/ingredient_quantity"
@@ -23,8 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="35sp"
-        android:inputType="numberDecimal"
-        />
+        android:inputType="numberDecimal" />
 
     <TextView
         android:id="@+id/ingredient_unit"
