--- a/AntonsWebbsida/web/resources/css/cssLayout.css
+++ b/AntonsWebbsida/web/resources/css/cssLayout.css
@@ -8,6 +8,13 @@
     font-style: oblique;
     font-family: serif;
 }
+#topMenu{
+    width:100%;
+    height: 40px;
+    background-color: #E57373;
+    padding-left:10%;
+    
+}
 #contentSection1{
     width: 80%;
     height: 1000px;
@@ -54,6 +61,7 @@
     padding: 0px;
     margin: 0px;
     float: left;
+    background-color: #F5F5F5;
 }
 #adminContentRight{
     width: 50%;
@@ -61,6 +69,7 @@
     padding: 0px;
     margin: 0px;
     float: right;
+    background-color: #F5F5F5;
 }
 #weekMenuRight{
     width: 50%;
@@ -105,6 +114,23 @@
     margin: 0px;
     float: left;
 }
+#menuLeftTodaysLunch{
+    width: 100%;
+    height: 250px;
+    /*background-color: red;*/
+    padding: 0px;
+    margin: 0px;
+    float: left;
+    border-top-left-radius: 15px;
+}
+#lunchPicture{
+    width:95%;
+    height: 700px;
+    padding: 0px;
+    margin: 0px;
+    float: right;
+    /*background-color: red;*/
+}
 
 #bottom {
     position: relative;
@@ -129,7 +155,7 @@
 
 .center_content {
     position: relative;
-    background-color: #dddddd;
+    background-color: #424242;
     padding: 0px;
 }
 
@@ -190,6 +216,26 @@ h1{
 h2{
     font-size: 18px;
     font-family: palatino;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #E57373   ;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 
