--- a/app/src/main/res/layout/courses_spec_popup.xml
+++ b/app/src/main/res/layout/courses_spec_popup.xml
@@ -24,12 +24,26 @@
             android:layout_below="@+id/courses_popup_title"
             android:hint="Lägg till/ta bort" />
 
-        <Button
-            android:id="@+id/courses_popup_close_button"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="closePopup"
-            android:text="Spara"
             android:layout_below="@+id/courses_popup_edittext"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true">
+
+                <Button
+                    android:id="@+id/courses_popup_save_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:onClick="saveSpecial"
+                    android:text="Spara"/>
+
+                <Button
+                    android:id="@+id/courses_popup_close_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:onClick="closePopup"
+                    android:text="Avbryt" />
+        </LinearLayout>
 </RelativeLayout>
