--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,8 +48,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Logga in"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="27dp"
         android:onClick="doLogin"
         android:layout_below="@+id/password_login"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Registrera"
+        android:onClick="goToRegister"
+        android:id="@+id/register_button"
+        android:layout_below="@+id/login_button"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
