--- a/app/src/main/res/layout/table_order_spec.xml
+++ b/app/src/main/res/layout/table_order_spec.xml
@@ -2,39 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
+        <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/order"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:paddingLeft="5dp"
+            android:textColor="@color/colorBlack"
+            />
+
+        <ImageButton
+            android:id="@+id/spec"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginLeft="40dp"
+            android:background="@drawable/ic_star_black_24dp"
+            />
+
+        <ImageButton
+            android:id="@+id/trash"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginStart="10dp"
+            android:background="@drawable/ic_delete_black_24dp"
+            android:onClick="removeSpecOrder"/>
+
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/order"
-        android:layout_width="240dp"
+        android:id="@+id/order_spec_order_text"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:paddingLeft="5dp"
+        android:textSize="25sp"
         android:textColor="@color/colorBlack"
-        />
-
-    <ImageButton
-        android:id="@+id/spec"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:background="@drawable/ic_star_black_24dp"
-        />
-
-    <ImageButton
-        android:id="@+id/trash"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginStart="10dp"
-        android:background="@drawable/ic_delete_black_24dp"
-        android:onClick="removeSpecOrder"/>
-
-
+        android:paddingLeft="15dp"/>
 </LinearLayout>
-
