--- a/app/src/main/res/layout/table_order_spec.xml
+++ b/app/src/main/res/layout/table_order_spec.xml
@@ -4,16 +4,16 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-        <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         <TextView
             android:id="@+id/order"
-            android:layout_width="240dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:paddingLeft="5dp"
             android:textColor="@color/colorBlack"
             />
@@ -26,6 +26,7 @@
             android:layout_marginStart="40dp"
             android:layout_marginLeft="40dp"
             android:background="@drawable/ic_star_black_24dp"
+            android:layout_alignParentRight="true"
             />
 
         <ImageButton
@@ -38,16 +39,17 @@
             android:layout_marginRight="10dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/ic_delete_black_24dp"
-            android:onClick="removeSpecOrder"/>
+            android:onClick="removeSpecOrder"
+            android:layout_alignParentRight="true"/>
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/order_spec_order_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textColor="@color/colorBlack"
-        android:paddingLeft="15dp"/>
+        android:paddingLeft="20dp"/>
 </LinearLayout>
