--- a/app/src/main/res/layout-land/activity_tables.xml
+++ b/app/src/main/res/layout-land/activity_tables.xml
@@ -1,95 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <Button
-        android:id="@+id/table1_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table1"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:onClick="goToOrder"/>
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:context="se.miun.antonsskafferi.TablesActivity"
+    tools:layout_editor_absoluteY="73dp"
+    tools:layout_editor_absoluteX="0dp"
+    android:gravity="center"
+    android:weightSum="4">
+    <View
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.05"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.9"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:weightSum="2">
 
-    <Button
-        android:id="@+id/table2_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table2"
-        android:layout_marginLeft="39dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:onClick="goToOrder"/>
+        <Button
+            android:id="@+id/table1_button"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:text="@string/table1"
+            android:onClick="goToOrder"/>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"/>
 
-    <Button
-        android:id="@+id/table3_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table3"
-        android:layout_marginStart="39dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toRightOf="@+id/table1_button"
-        android:layout_marginLeft="39dp"
-        android:onClick="goToOrder"/>
+        <Button
+            android:id="@+id/table2_button"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:text="@string/table2"
+            android:onClick="goToOrder"/>
 
-    <Button
-        android:id="@+id/table4_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table4"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/table2_button"
-        android:layout_marginLeft="39dp"
-        android:onClick="goToOrder"/>
+    </LinearLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.1"/>
 
-    <Button
-        android:id="@+id/table5_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table5"
-        android:layout_marginStart="39dp"
-        app:layout_constraintLeft_toRightOf="@+id/table3_button"
-        android:layout_marginLeft="39dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:onClick="goToOrder"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.9"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:weightSum="2">
+        <Button
+            android:id="@+id/table3_button"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:text="@string/table3"
+            android:onClick="goToOrder"/>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"/>
 
-    <Button
-        android:id="@+id/table6_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table6"
-        app:layout_constraintLeft_toRightOf="@+id/table4_button"
-        android:layout_marginLeft="39dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:onClick="goToOrder"/>
+        <Button
+            android:id="@+id/table4_button"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:text="@string/table4"
+            android:onClick="goToOrder"/>
+    </LinearLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.1"/>
 
-    <Button
-        android:id="@+id/table7_button"
-        android:layout_width="115dp"
-        android:layout_height="85dp"
-        android:text="@string/table7"
-        android:layout_marginStart="135dp"
-        android:layout_marginRight="25dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.952"
-        android:onClick="goToOrder"/>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.9"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:weightSum="2">
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/table5_button"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:text="@string/table5"
+            android:onClick="goToOrder"/>
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"/>
+
+
+        <Button
+            android:id="@+id/table6_button"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:text="@string/table6"
+            android:layout_weight="0.8"
+            android:onClick="goToOrder"/>
+
+    </LinearLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.1"/>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.9"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:weightSum="2">
+
+        <Button
+            android:id="@+id/table7_button"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:text="@string/table7"
+            android:onClick="goToOrder" />
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2"/>
+
+
+        <Button
+            android:id="@+id/kitchen_button"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:paddingTop="15dp"
+            android:layout_weight="0.8"
+            android:text="Kök"
+            android:onClick="goToKitchen"/>
+
+
+
+    </LinearLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.05"/>
+
+
+</LinearLayout>
